# sonyx_2026

./: .gitignore  HANDOFF.md  README.md  pyproject.toml  ruff.toml  ty.toml
docs/: floorplan_handoff.md  pcm_cells.md
src/sonyx/: __init__.py  artifacts.py  design.py  floorplan.py  knobs.py  parameters.py  signoff.py
src/sonyx/blocks/: __init__.py  bondpads.py  edge_couplers.py  pcm.py  reticle.py
src/sonyx/blocks/dies/: __init__.py  _frame.py  _head_coupler_block.py  die_r1a.py  die_r1b.py  die_r2a.py  die_r2b.py  die_r3a.py  die_r3b.py  die_r4a.py  die_r4b.py  test_cells_die_r1a.py
src/sonyx/ip/: __init__.py
tests/: test_layout.py
