[project]
name = "sonyx"
version = "0.1.0"
description = "Picasso layout targeting the luqia_ln200 PDK."
requires-python = ">=3.13"
dependencies = [
    "picasso",
    "luqia_ln200",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sonyx"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.4",
    "ruff>=0.14",
    "ty>=0.0.14",
]

[tool.uv.sources]
luqia_ln200 = { path = "/Users/philippe/Github/pdk-luqia-ln200", editable = true }
picasso = { path = "/Users/philippe/Github/picasso-pdk-dev/picasso", editable = true }
